--- a/.env
+++ b/.env
@@ -1,5 +1,17 @@
-PGHOST="localhost"
-PGPORT="5432"
-PGUSER="postgres"
-PGPASSWORD="root"
-PGDATABASE="aqua_home_db"
+# DB config for Go backend
+DB_HOST=localhost
+DB_PORT=5432
+DB_USER=postgres
+DB_PASSWORD=aqua@123
+DB_NAME=aqua_home_db
+# App config
+PORT=5000
+ENVIRONMENT=development
+
+# JWT
+JWT_SECRET=aquahome_secret_key
+JWT_EXPIRY_HOURS=24
+
+# Razorpay (test or real)
+RAZORPAY_KEY=rzp_test_QfMQ0LRiTplCvR
+RAZORPAY_SECRET=169NdofVMND0u1o8yTWsgx47
