--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
 # DB config for Go backend
-DB_HOST=localhost
-DB_PORT=5432
-DB_USER=postgres
-DB_PASSWORD=aqua@123
-DB_NAME=aqua_home_db
+PGHOST="localhost"
+PGPORT="5432"
+PGUSER="postgres"
+PGPASSWORD="aqua@123"
+PGDATABASE="aqua_home_db"
 # App config
 PORT=5000
 ENVIRONMENT=development
