--- a/.env
+++ b/.env
@@ -1,17 +1,18 @@
-# DB config for Go backend
-PGHOST="localhost"
-PGPORT="5432"
-PGUSER="postgres"
-PGPASSWORD="aqua@123"
-PGDATABASE="aqua_home_db"
+# ✅ Render PostgreSQL credentials
+DB_HOST=dpg-d0liomt6ubrc73c4mlf0-a.singapore-postgres.render.com
+DB_PORT=5432
+DB_USER=aquadmin
+DB_PASSWORD=9HhMg75qCgqv8U6cWyYZMEj3v8ZfkA69
+DB_NAME=aqua_home_db
+
 # App config
 PORT=5000
-ENVIRONMENT=development
+ENVIRONMENT=production
 
 # JWT
 JWT_SECRET=aquahome_secret_key
 JWT_EXPIRY_HOURS=24
 
-# Razorpay (test or real)
+# Razorpay keys (for testing)
 RAZORPAY_KEY=rzp_test_QfMQ0LRiTplCvR
 RAZORPAY_SECRET=169NdofVMND0u1o8yTWsgx47
