--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ DB_HOST=dpg-d0q6sv2dbo4c73ei4j3g-a.singapore-postgres.render.com
 DB_PORT=5432
 DB_USER=aquadmin
 DB_PASSWORD=cKTnzs0ht7NyogIOWZTsBFMhjA4DHgp0
-DB_NAME=Aquahome_db
+DB_NAME=aqua_home_db_orb5
 
 PORT=5000
 ENVIRONMENT=production
